--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>HTML Academy: Техномарт</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,700&amp;subset=cyrillic" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -17,8 +19,8 @@
             <form action="https://echo.htmlacademy.ru" method="get">
               <input type="text" name="search" placeholder="Поиск">
             </form>
-            <a class="bookmarks" href="#">Закладки</a>
-            <a class="basket" href="#">Корзина</a>
+            <a class="bookmarks" href="#">Закладки: 0</a>
+            <a class="basket" href="#">Корзина: 0</a>
             <a class="order" href="#">Оформить заказ</a>
           </div>
         </div>
@@ -38,7 +40,7 @@
               <span class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
             </div>
             <div class="login_options">
-              <a class="login" href="#">Вход</a>
+              <a class="login" href="#">Войти</a>
               <a class="register" href="#">Регистрация</a>
             </div>
           </div>
@@ -139,12 +141,13 @@
               <a href="#">
                 <img src="img/BOSCH-BFG-2000.jpg" width="180" height="160" alt="" />
                 <h1>Перфоратор BOSCH BFG 2000</h1>
+                <span class="products_old_price"></span>
                 <span class="products_price">12500 Р</span>
               </a>
             </article>
           </div>
         </section>
-        <section class="title clearfix">
+        <section class="title">
           <h2>ПОПУЛЯРНЫЕ ПРОИЗВОДИТЕЛИ</h2>
           <a class="main_btn" href="#">ВСЕ ПРОИЗВОДИТЕЛИ</a>
         </section>
@@ -276,46 +279,48 @@
         <div class="container">
           <div class="up_footer_flex">
             <div class="about">
-              <a href="#"><img src="img/logo.png" width="220" height="47" alt="Техномарт"></a>
+              <a href="#"><img src="img/logo_footer.png" width="220" height="68" alt="Техномарт"></a>
               <p>
                 г. Санкт-Петербург, ул. Б.
                 Конюшенная, д. 19/8
               </p>
             </div>
-            <div class="footer_nav">
-              <ul>
-                <li>
-                  <a href="#">Компания</a>
-                </li>
-                <li>
-                  <a href="#">Новости</a>
-                </li>
-                <li>
-                  <a href="catalog.html">Каталог</a>
-                </li>
-                <li>
-                  <a href="#">Доставка</a>
-                </li>
-                <li>
-                  <a href="#">Контакты</a>
-                </li>
-              </ul>
-            </div>
-            <div class="catalog_nav">
-              <ul>
-                <li>
-                  <a href="#">Материалы</a>
-                </li>
-                <li>
-                  <a href="#">Техника</a>
-                </li>
-                <li>
-                  <a href="#">Инструмент</a>
-                </li>
-                <li>
-                  <a href="#">Спецпредложения</a>
-                </li>
-              </ul>
+            <div class="nav_block">
+              <div class="footer_nav">
+                <ul>
+                  <li>
+                    <a href="#">Компания</a>
+                  </li>
+                  <li>
+                    <a href="#">Новости</a>
+                  </li>
+                  <li>
+                    <a href="catalog.html">Каталог</a>
+                  </li>
+                  <li>
+                    <a href="#">Доставка</a>
+                  </li>
+                  <li>
+                    <a href="#">Контакты</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="catalog_nav">
+                <ul>
+                  <li>
+                    <a href="#">Материалы</a>
+                  </li>
+                  <li>
+                    <a href="#">Техника</a>
+                  </li>
+                  <li>
+                    <a href="#">Инструмент</a>
+                  </li>
+                  <li>
+                    <a href="#">Спецпредложения</a>
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
@@ -330,9 +335,9 @@
               </p>
             </div>
             <div class="footer_social">
-              <a class="social_btn social_btn_vk" href="#">Вконтакте</a>
-              <a class="social_btn social_btn_fb" href="#">Фейсбук</a>
-              <a class="social_btn social_btn_inst" href="#">Инстаграм</a>
+              <a class="social_btn btn_vk" href="#"></a>
+              <a class="social_btn btn_fb" href="#"></a>
+              <a class="social_btn btn_inst" href="#"></a>
             </div>
             <div class="footer_contacts">
               <p>
