--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
             <div class="logo">
               <a><img src="img/logo.png" width="220" height="47" alt="Техномарт"></a>
             </div>
-            <form action="https://echo.htmlacademy.ru" method="get">
-              <input type="text" name="search" placeholder="Поиск">
-            </form>
+            <div class="top_search">
+              <form action="https://echo.htmlacademy.ru" method="get">
+                <input type="text" class="top_search_input" name="search" placeholder="Поиск">
+                <label for="search" class="top_search_label"></label>
+              </form>
+            </div>
             <a class="bookmarks" href="#">Закладки: 0</a>
             <a class="basket" href="#">Корзина: 0</a>
             <a class="order" href="#">Оформить заказ</a>
