--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
             <div class="contacts">
               <div class="phone">+7 (812) 555-05-55</div>
-              <span class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
+              <div class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</div>
             </div>
             <div class="login_options">
               <a class="login" href="#">Войти</a>
@@ -80,6 +80,7 @@
         <section class="catalog">
           <div class="catalog_left">
             <div class="catalog_item materials">
+              <div class="flag flag-new">новинка</div>
               <h2>Материалы</h2>
               <a class="item_btn" href="#">НА ЛЮБОЙ ВКУС</a>
             </div>
@@ -142,7 +143,7 @@
           </div>
         </section>
         <section class="title">
-          <h2>ПОПУЛЯРНЫЕ ТОВАРЫ</h2>
+          <h2>ПОПУЛЯРНЫЕ ТОВАРЫ:</h2>
           <a class="main_btn" href="#">ВСЕ ПОПУЛЯРНЫЕ ТОВАРЫ</a>
         </section>
         <section class="products">
@@ -239,7 +240,7 @@
                       поднимая его на ваш этаж!
                     </p>
                   </div>
-                  <img src="../img/services_deliver.png" alt="deliver" width="468" height="261">
+                  <img src="img/services_deliver.png" alt="deliver" width="468" height="261">
                 </div>
                 <div class="services_slide">
                   <div class="services_slide_text">
@@ -364,6 +365,7 @@
               <p>
                 г. Санкт-Петербург, ул. Б.
                 Конюшенная, д. 19/8
+                +7 (812) 555-05-55
               </p>
             </div>
             <div class="nav_block">
@@ -434,5 +436,32 @@
         </div>
       </div>
     </footer>
+    <div class="modal_content">
+      <button class="modal_content_close" type="button" title="Закрыть">Закрыть</button>
+      <form class="write_us" action="https://echo.htmlacademy.ru" method="post">
+        <div class="write_us_text">
+          <div class="user_name_block">
+            <label for="username">Ваше имя</label>
+            <input class="user_name" type="text" name="username" placeholder="Представьтесь, пожалуйста">
+          </div>
+          <div class="user_email_block">
+            <label for="email">Ваш e-mail</label>
+            <input class="user_email" type="text" name="email" placeholder="Для отправки ответа">
+          </div>     
+          <div class="user_text_block">
+            <label for="text">Текст письма</label>
+            <input class="user_text" type="text" name="text" placeholder="В свободной форме">
+          </div>
+        </div>
+        <div class="modal_btn_block">
+          <button class="main_btn" type="submit">ОТПРАВИТЬ</button>
+        </div>
+      </form>
+    </div>
+    <div class="modal_content_map">
+      <button class="modal_content_close" type="button" title="Закрыть">Закрыть</button>
+      <div id="yandex-map"></div>
+    </div>
+    <div class="modal_overlay"></div>
   </body>
 </html>
