--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cuprum:400,700&amp;subset=cyrillic" rel="stylesheet">
+    <script src="js/script.js"></script>
   </head>
   <body>
     <header>
@@ -50,7 +51,7 @@
           <nav class="header_nav">
             <ul>
               <li>
-                <a>Главная</a>
+                <a class="first_a">Главная</a>
               </li>
               <li>
                 <a href="#">Компания</a>
@@ -68,7 +69,7 @@
                 <a href="#">Доставка</a>
               </li>
               <li>
-                <a href="#">Контакты</a>
+                <a class="last_a" href="#">Контакты</a>
               </li>
             </ul>
           </nav>
@@ -89,9 +90,11 @@
               <a class="item_btn" href="#">НА ВСЕ СЛУЧАИ</a>
             </div>
             <div class="catalog_slider">
+              <input type="radio" id="btn_1" name="toggle" checked>
+              <input type="radio" id="btn_2" name="toggle">
               <div class="slider_controls">
-                <i class="active"></i>
-                <i></i>
+                <label for="btn_1"></label>
+                <label for="btn_2"></label>
               </div>
               <div class="slides">
                 <div class="slide">
@@ -150,7 +153,7 @@
           <div class="popular">
             <article class="products_item">
               <a href="#">
-                <img src="img/BOSCH-BFG-9000.jpg" width="180" height="160" alt="" />
+                <img src="img/BOSCH-BFG-9000.jpg" width="218" height="160" alt="" />
                 <h1>Перфоратор BOSCH BFG 9000</h1>
                 <span class="products_old_price">32500 Р</span>
                 <span class="products_price">25500 Р</span>
@@ -158,7 +161,7 @@
             </article>
             <article class="products_item">
               <a href="#">
-                <img src="img/BOSCH-BFG-3000.jpg" width="180" height="160" alt="" />
+                <img src="img/BOSCH-BFG-3000.jpg" width="218" height="160" alt="" />
                 <h1>Перфоратор BOSCH BFG 3000</h1>
                 <span class="products_old_price">22500 Р</span>
                 <span class="products_price">15500 Р</span>
@@ -166,7 +169,7 @@
             </article>
             <article class="products_item">
               <a href="#">
-                <img src="img/BOSCH-BFG-6000.jpg" width="180" height="160" alt="" />
+                <img src="img/BOSCH-BFG-6000.jpg" width="218" height="160" alt="" />
                 <h1>Перфоратор BOSCH BFG 6000</h1>
                 <span class="products_old_price">25500 Р</span>
                 <span class="products_price">30500 Р</span>
@@ -174,7 +177,7 @@
             </article>
             <article class="products_item">
               <a href="#">
-                <img src="img/BOSCH-BFG-2000.jpg" width="180" height="160" alt="" />
+                <img src="img/BOSCH-BFG-2000.jpg" width="218" height="160" alt="" />
                 <h1>Перфоратор BOSCH BFG 2000</h1>
                 <span class="products_old_price"></span>
                 <span class="products_price">12500 Р</span>
@@ -224,10 +227,18 @@
               Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
             </p>
             <div class="services_slider">
+              <input type="radio" id="serv_btn_1" name="toggle" checked>
+              <input type="radio" id="serv_btn_2" name="toggle">
+              <input type="radio" id="serv_btn_3" name="toggle">
               <div class="services_slider_controls">
+                <label for="serv_btn_1">Доставка</label>
+                <label for="serv_btn_2">Гарантия</label>
+                <label for="serv_btn_3">Кредит</label>
+<!--
                 <i class="active">Доставка</i>
                 <i>Гарантия</i>
                 <i>Кредит</i>
+-->
               </div>
               <div class="services_slides">
                 <div class="services_slide">
@@ -252,7 +263,7 @@
                       Дом уж восстановите как-нибудь сами.
                     </p>
                   </div>
-                  <img src="../img/services_guarantee.png" alt="deliver" width="389" height="283">
+                  <img src="img/services_guarantee.png" alt="deliver" width="389" height="261">
                 </div>
                 <div class="services_slide">
                   <div class="services_slide_text">
@@ -262,7 +273,7 @@
                       Кредитные консультанты придут вам на помощь.
                     </p>
                   </div>
-                  <img src="../img/services_credit.png" alt="deliver" width="465" height="285">
+                  <img src="img/services_credit.png" alt="deliver" width="465" height="261">
                 </div>
 
               </div>
@@ -429,7 +440,7 @@
               </p>
               <p>
                 Разработано —
-                <a href="#">htmlacademy.ru</a>
+                <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
               </p>
             </div>
           </div>
