--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cuprum:400,700&amp;subset=cyrillic" rel="stylesheet">
-    <script src="js/script.js"></script>
   </head>
   <body>
     <header>
@@ -108,7 +107,7 @@
           <h1>ПЕРФОРАТОРЫ</h1>
         </div>
         <div class="aside_catalog">
-          <form class="aside_catalog_form" action="index.html" method="post">
+          <form class="aside_catalog_form" action="https://echo.htmlacademy.ru" method="post">
             <div class="aside_catalog_name">ФИЛЬТР</div>
             <div class="range-filter">
               <h3>ЦЕНА:</h3>
@@ -248,7 +247,7 @@
               </article>
               <article class="products_item_clg">
                 <a href="#">
-                  <div class="flag flag-new">новинка</div>
+                  <div class="flag flag_new">новинка</div>
                   <div class="actions">
                       <a href="#" class="buy_btn">КУПИТЬ</a>
                       <a href="#" class="bookmark_btn">В ЗАКЛАДКИ</a>
@@ -277,7 +276,7 @@
               </article>
               <article class="products_item_clg">
                 <a href="#">
-                  <div class="flag">новинка</div>
+                  <div class="flag flag_new">новинка</div>
                   <div class="actions">
                       <a href="#" class="buy_btn">КУПИТЬ</a>
                       <a href="#" class="bookmark_btn">В ЗАКЛАДКИ</a>
@@ -306,7 +305,7 @@
               </article>
               <article class="products_item_clg">
                 <a href="#">
-                  <div class="flag">новинка</div>
+                  <div class="flag flag_new">новинка</div>
                   <div class="actions">
                       <a href="#" class="buy_btn">КУПИТЬ</a>
                       <a href="#" class="bookmark_btn">В ЗАКЛАДКИ</a>
@@ -461,5 +460,6 @@
         <a class="order_btn" href="#">ПРОДОЛЖИТЬ ПОКУПКИ</a>
       </div>
     </div>
+    <script src="js/script.js"></script>
   </body>
 </html>
