--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cuprum:400,700&amp;subset=cyrillic" rel="stylesheet">
-    <script src="js/script.js"></script>
   </head>
   <body>
     <header>
@@ -153,6 +152,7 @@
           <div class="popular">
             <article class="products_item">
               <a href="#">
+                <div class="flag">новинка</div>
                 <img src="img/BOSCH-BFG-9000.jpg" width="218" height="160" alt="" />
                 <h1>Перфоратор BOSCH BFG 9000</h1>
                 <span class="products_old_price">32500 Р</span>
@@ -161,6 +161,7 @@
             </article>
             <article class="products_item">
               <a href="#">
+                <div class="flag">новинка</div>
                 <img src="img/BOSCH-BFG-3000.jpg" width="218" height="160" alt="" />
                 <h1>Перфоратор BOSCH BFG 3000</h1>
                 <span class="products_old_price">22500 Р</span>
@@ -169,6 +170,7 @@
             </article>
             <article class="products_item">
               <a href="#">
+                <div class="flag">новинка</div>
                 <img src="img/BOSCH-BFG-6000.jpg" width="218" height="160" alt="" />
                 <h1>Перфоратор BOSCH BFG 6000</h1>
                 <span class="products_old_price">25500 Р</span>
@@ -177,6 +179,7 @@
             </article>
             <article class="products_item">
               <a href="#">
+                <div class="flag flag_new">новинка</div>
                 <img src="img/BOSCH-BFG-2000.jpg" width="218" height="160" alt="" />
                 <h1>Перфоратор BOSCH BFG 2000</h1>
                 <span class="products_old_price"></span>
@@ -359,8 +362,8 @@
                   Вы можете забрать товар сами,
                   заехав в наш офис:
                 </p>
-                <a href="#"><img src="img/map.jpg" alt="Карта" width="300" height="158"></a>
-                <a class="main_btn" href="#">Заблудились? Напишите нам!</a>
+                <a href="map.html"><img src="img/map.jpg" alt="Карта" width="300" height="158"></a>
+                <a class="main_btn" href="form.html">Заблудились? Напишите нам!</a>
               </div>
             </div>
           </div>
@@ -474,5 +477,6 @@
       <div id="yandex-map"></div>
     </div>
     <div class="modal_overlay"></div>
+    <script src="js/script.js"></script>
   </body>
 </html>
