--- a/catalog.html
+++ b/catalog.html
@@ -14,7 +14,7 @@
         <div class="container">
           <div class="site_options">
             <div class="logo">
-              <a><img src="img/logo.png" width="220" height="47" alt="Техномарт"></a>
+              <a href="index.html"><img src="img/logo.png" width="220" height="47" alt="Техномарт"></a>
             </div>
             <div class="top_search">
               <form action="https://echo.htmlacademy.ru" method="get">
