--- a/catalog.html
+++ b/catalog.html
@@ -460,6 +460,6 @@
         <a class="order_btn" href="#">ПРОДОЛЖИТЬ ПОКУПКИ</a>
       </div>
     </div>
-    <script src="js/script.js"></script>
+    <script src="js/script.min.js"></script>
   </body>
 </html>
