--- a/index.html
+++ b/index.html
@@ -477,6 +477,6 @@
       <div id="yandex-map"></div>
     </div>
     <div class="modal_overlay"></div>
-    <script src="js/script.js"></script>
+    <script src="js/script.min.js"></script>
   </body>
 </html>
