--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="top_search">
               <form action="https://echo.htmlacademy.ru" method="get">
                 <input type="text" class="top_search_input" name="search" placeholder="Поиск">
-                <label for="search" class="top_search_label"></label>
+                <label class="top_search_label"></label>
               </form>
             </div>
             <a class="bookmarks" href="#">Закладки: 0</a>
@@ -455,15 +455,15 @@
       <form class="write_us" action="https://echo.htmlacademy.ru" method="post">
         <div class="write_us_text">
           <div class="user_name_block">
-            <label for="username">Ваше имя</label>
+            <label>Ваше имя</label>
             <input class="user_name" type="text" name="username" placeholder="Представьтесь, пожалуйста">
           </div>
           <div class="user_email_block">
-            <label for="email">Ваш e-mail</label>
+            <label>Ваш e-mail</label>
             <input class="user_email" type="text" name="email" placeholder="Для отправки ответа">
           </div>
           <div class="user_text_block">
-            <label for="text">Текст письма</label>
+            <label>Текст письма</label>
             <input class="user_text" type="text" name="text" placeholder="В свободной форме">
           </div>
         </div>
