--- a/catalog.html
+++ b/catalog.html
@@ -19,7 +19,7 @@
             <div class="top_search">
               <form action="https://echo.htmlacademy.ru" method="get">
                 <input type="text" class="top_search_input" name="search" placeholder="Поиск">
-                <label for="search" class="top_search_label"></label>
+                <label class="top_search_label"></label>
               </form>
             </div>
             <a class="bookmarks" href="#">Закладки: 0</a>
@@ -90,7 +90,7 @@
         <div class="breadcrumbs">
           <ul>
             <li>
-              <a href="#"><img src="img/icons/icon_home.png" width="15" height="12"></a>
+              <a href="#"><img src="img/icons/icon_home.png" width="15" height="12" alt=""></a>
             </li>
             <li>
               <a class="path" href="#">КАТАЛОГ</a>
@@ -216,7 +216,6 @@
             </div>
             <div class="products_item_list">
               <article class="products_item_clg">
-                <a href="#">
                   <div class="flag">новинка</div>
                   <div class="actions">
                       <a href="#" class="buy_btn">КУПИТЬ</a>
@@ -228,10 +227,8 @@
                   <h1>Перфоратор BOSCH BFG 3000</h1>
                   <span class="products_old_price">22500 Р</span>
                   <span class="products_price">15500 Р</span>
-                </a>
               </article>
               <article class="products_item_clg">
-                <a href="#">
                   <div class="flag">новинка</div>
                   <div class="actions">
                       <a href="#" class="buy_btn">КУПИТЬ</a>
@@ -243,10 +240,8 @@
                   <h1>Перфоратор BOSCH BFG 6000</h1>
                   <span class="products_old_price">30500 Р</span>
                   <span class="products_price">25500 Р</span>
-                </a>
               </article>
               <article class="products_item_clg">
-                <a href="#">
                   <div class="flag flag_new">новинка</div>
                   <div class="actions">
                       <a href="#" class="buy_btn">КУПИТЬ</a>
@@ -257,10 +252,8 @@
 
                   <h1>Перфоратор BOSCH BFG 2000</h1>
                   <span class="products_price">12500 Р</span>
-                </a>
               </article>
               <article class="products_item_clg">
-                <a href="#">
                   <div class="flag">новинка</div>
                   <div class="actions">
                       <a href="#" class="buy_btn">КУПИТЬ</a>
@@ -272,10 +265,8 @@
                   <h1>Перфоратор BOSCH BFG 3000</h1>
                   <span class="products_old_price">22500 Р</span>
                   <span class="products_price">15500 Р</span>
-                </a>
               </article>
               <article class="products_item_clg">
-                <a href="#">
                   <div class="flag flag_new">новинка</div>
                   <div class="actions">
                       <a href="#" class="buy_btn">КУПИТЬ</a>
@@ -287,10 +278,8 @@
                   <h1>Перфоратор BOSCH BFG 6000</h1>
                   <span class="products_old_price">30500 Р</span>
                   <span class="products_price">25500 Р</span>
-                </a>
               </article>
               <article class="products_item_clg">
-                <a href="#">
                   <div class="flag">новинка</div>
                   <div class="actions">
                       <a href="#" class="buy_btn">КУПИТЬ</a>
@@ -301,10 +290,8 @@
 
                   <h1>Перфоратор BOSCH BFG 2000</h1>
                   <span class="products_price">12500 Р</span>
-                </a>
               </article>
               <article class="products_item_clg">
-                <a href="#">
                   <div class="flag flag_new">новинка</div>
                   <div class="actions">
                       <a href="#" class="buy_btn">КУПИТЬ</a>
@@ -316,10 +303,8 @@
                   <h1>Перфоратор BOSCH BFG 3000</h1>
                   <span class="products_old_price">22500 Р</span>
                   <span class="products_price">15500 Р</span>
-                </a>
               </article>
               <article class="products_item_clg">
-                <a href="#">
                   <div class="flag">новинка</div>
                   <div class="actions">
                       <a href="#" class="buy_btn">КУПИТЬ</a>
@@ -331,10 +316,8 @@
                   <h1>Перфоратор BOSCH BFG 6000</h1>
                   <span class="products_old_price">30500 Р</span>
                   <span class="products_price">25500 Р</span>
-                </a>
               </article>
               <article class="products_item_clg">
-                <a href="#">
                   <div class="flag">новинка</div>
                   <div class="actions">
                       <a href="#" class="buy_btn">КУПИТЬ</a>
@@ -345,7 +328,6 @@
 
                   <h1>Перфоратор BOSCH BFG 2000</h1>
                   <span class="products_price">12500 Р</span>
-                </a>
               </article>
             </div>
             <div class="nav_btns">
